--- a/omnicoder2/Question/1.html
+++ b/omnicoder2/Question/1.html
@@ -1,5 +1,7 @@
 <div id="Q1">
 	<span id="Qdesc">Q1 Sample Question 1 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
+	sample Input<br>
+	3<br>
 	sample output<br>
 	***<br>
 	**<br>
