r1 questions added to html

--- a/omnicoder/Ques/1.html
+++ b/omnicoder/Ques/1.html
@@ -1,19 +1,26 @@
 <div id="Q">
-	<span id="Qdesc">Sample Question #1 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+	<span id="Qdesc">
+<p>1. What will be the output of FUN function?</p>
+<p style="padding-left: 30px;">void FUN()<br /> {</p>
+<p style="padding-left: 60px;">int a = 60;<br /> int b = 5;<br /> char c = a+b;<br /> cout&lt;&lt;c&lt;&lt;" "&lt;&lt;c+32;</p>
+<p style="padding-left: 30px;">}</p>
+     </span>
+	<p style="padding-left: 80px;">
+		<label class="cont"> a. 65 97
 			<input type="radio" name="q1" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> b. A a
 			<input type="radio" name="q1" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> c. A 97
 			<input type="radio" name="q1" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> d. 65 a
 			<input type="radio" name="q1" value="d">
 			<span class="checkmark"></span>
 		</label>
+	</p>
 </div>
