--- a/omnicoder/Ques/12.html
+++ b/omnicoder/Ques/12.html
@@ -1,18 +1,18 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #12 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">Which of the following sorting algorithms can be used to sort a random linked list with minimum time complexity?</span>
+		<br><br><label class="cont"> Insertion Sort
 			<input type="radio" name="q12" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont">  Quick Sort
 			<input type="radio" name="q12" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> Heap Sort
 			<input type="radio" name="q12" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> Merge Sort
 			<input type="radio" name="q12" value="d">
 			<span class="checkmark"></span>
 		</label>
