--- a/omnicoder/Ques/13.html
+++ b/omnicoder/Ques/13.html
@@ -1,18 +1,21 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #13 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>Consider the following recursive function fun(x, y). What is the value of fun(4, 3)</p>
+<p style="padding-left: 30px;">int fun(int x, int y) <br /> {</p>
+<p style="padding-left: 60px;"><br /> if (x == 0) <br /> return y; <br /> return fun(x - 1, x + y); </p>
+<p style="padding-left: 30px;">}</p></span><br><br>
+		<label class="cont"> 13
 			<input type="radio" name="q13" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 12
 			<input type="radio" name="q13" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 9
 			<input type="radio" name="q13" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> 10
 			<input type="radio" name="q13" value="d">
 			<span class="checkmark"></span>
 		</label>
