--- a/omnicoder/Ques/14.html
+++ b/omnicoder/Ques/14.html
@@ -1,18 +1,21 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #14 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>What does the following function do?</p>
+<p style="padding-left: 30px;">int fun(unsigned int n)<br /> {</p>
+<p style="padding-left: 60px;">if (n == 0 || n == 1)<br /> return n;<br /> <br /> if (n%3 != 0)<br /> return 0;<br /> <br /> return fun(n/3);</p>
+<p style="padding-left: 30px;">}</p> </span><br><br>
+		<label class="cont"> It returns 1 when n is a multiple of 3, otherwise returns 0
 			<input type="radio" name="q14" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont">  It returns 1 when n is a power of 3, otherwise returns 0
 			<input type="radio" name="q14" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> It returns 0 when n is a multiple of 3, otherwise returns 1
 			<input type="radio" name="q14" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont">  It returns 0 when n is a power of 3, otherwise returns 1
 			<input type="radio" name="q14" value="d">
 			<span class="checkmark"></span>
 		</label>
