--- a/omnicoder/Ques/15.html
+++ b/omnicoder/Ques/15.html
@@ -1,18 +1,20 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #15 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>A process executes the code</p>
+<p style="padding-left: 30px;">fork();<br /> fork();<br /> fork();</p>
+<p>The total number of child processes created is</p></span><br><br>
+		<label class="cont"> 3
 			<input type="radio" name="q15" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 4
 			<input type="radio" name="q15" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 7
 			<input type="radio" name="q15" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> 8
 			<input type="radio" name="q15" value="d">
 			<span class="checkmark"></span>
 		</label>
