--- a/omnicoder/Ques/16.html
+++ b/omnicoder/Ques/16.html
@@ -1,18 +1,20 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #16 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>What is the output of the following program?</p>
+<p style="padding-left: 30px;">#include&lt;iostream&gt;<br />using namespace std;<br /> void f() { <br /> static int i; <br /> ++i; <br /> cout&lt;&lt;i&lt;&lt;" "; <br /> }</p>
+<p style="padding-left: 30px;">int main() { <br />f(); <br /> f(); <br /> f(); <br /> }</p></span><br><br>
+		<label class="cont"> 1 1 1
 			<input type="radio" name="q16" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 0 0 0
 			<input type="radio" name="q16" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 3 2 1
 			<input type="radio" name="q16" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> 1 2 3
 			<input type="radio" name="q16" value="d">
 			<span class="checkmark"></span>
 		</label>
