--- a/omnicoder/Ques/17.html
+++ b/omnicoder/Ques/17.html
@@ -1,18 +1,23 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #17 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>Does both the loops in the following programs prints the string length(exclude null character)?</p>
+<p style="padding-left: 30px;">#include&lt;iostream&gt;</p>
+<p style="padding-left: 30px;">using namespace std;<br /> int main() {</p>
+<p style="padding-left: 60px;">int i;<br /> char s[] = "hello";</p>
+<p style="padding-left: 60px;">for(i=0; s[i]; ++i);<br />&nbsp;&nbsp; cout&lt;&lt;i&lt;&lt;endl;</p>
+<p style="padding-left: 60px;">i=0; <br /> <br /> while(s[i++]);<br />&nbsp;&nbsp; cout&lt;&lt;i;<br /> }</p> </span><br><br>
+		<label class="cont">  Yes, both the loops prints the correct length
 			<input type="radio" name="q17" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> Only for loop prints the correct length
 			<input type="radio" name="q17" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> Only while loop prints the correct length
 			<input type="radio" name="q17" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> Compile error in the program.
 			<input type="radio" name="q17" value="d">
 			<span class="checkmark"></span>
 		</label>
