--- a/omnicoder/Ques/18.html
+++ b/omnicoder/Ques/18.html
@@ -1,18 +1,18 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #18 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">Operators such as …………………. cannot be overloaded.</span><br><br>
+		<label class="cont"> +
 			<input type="radio" name="q18" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> + +
 			<input type="radio" name="q18" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> ::
 			<input type="radio" name="q18" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> = =
 			<input type="radio" name="q18" value="d">
 			<span class="checkmark"></span>
 		</label>
