--- a/omnicoder/Ques/19.html
+++ b/omnicoder/Ques/19.html
@@ -1,18 +1,24 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #19 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc"><p>find output?</p>
+<p style="padding-left: 30px;"><br /> #include &lt;iostream&gt;<br /> using namespace std;</p>
+<p style="padding-left: 30px;">class X<br /> {<br /> public: X()</p>
+<p style="padding-left: 60px;">&nbsp;&nbsp; { cout&lt;&lt;"X"; }<br /> ~X()<br />&nbsp;&nbsp; { cout&lt;&lt;"~X"; }<br /> };</p>
+<p style="padding-left: 30px;">class Y : public X<br />{<br /> public: Y()</p>
+<p style="padding-left: 60px;">&nbsp; { cout&lt;&lt;"Y"; }<br /> ~Y()<br />&nbsp;&nbsp; { cout&lt;&lt;"~Y"; }</p>
+<p style="padding-left: 30px;">};</p> </span><br><br>
+		<label class="cont"> XY~X~Y
 			<input type="radio" name="q19" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> XY~Y~X
 			<input type="radio" name="q19" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> X~XY~Y
 			<input type="radio" name="q19" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> X~X~YY
 			<input type="radio" name="q19" value="d">
 			<span class="checkmark"></span>
 		</label>
