--- a/omnicoder/Ques/2.html
+++ b/omnicoder/Ques/2.html
@@ -1,19 +1,25 @@
 <div id="Q">
-	<span id="Qdesc">Sample Question #2 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+	<span id="Qdesc"><p>Find out the time complexity of following function?<br /> <br /> void solve(int n)<br />&nbsp;&nbsp;&nbsp; {<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; int i = 0 , j = 0;<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; for( i;i&lt;n;i++)<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; { <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; for(j;j&lt;n;j++)<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; cout&lt;&lt;"Good luck!";<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;}</p></span>
+	
+		<p style="padding-left: 80px;">
+		<label class="cont"> O(n^2)
 			<input type="radio" name="q2" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> O(n)
 			<input type="radio" name="q2" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> O(log(n)
 			<input type="radio" name="q2" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> O(nlog(n))
+
 			<input type="radio" name="q2" value="d">
 			<span class="checkmark"></span>
 		</label>
+		</p>
 </div>
