--- a/omnicoder/Ques/20.html
+++ b/omnicoder/Ques/20.html
@@ -1,18 +1,21 @@
 <div id="Q">
-	<span id="Qdesc">Sample Question #20 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+	<span id="Qdesc"><p style="padding-left: 30px;">class Mycpp<br /> {</p>
+<p style="padding-left: 60px;"><br /> int Mycpp()<br /> {<br /> cout&lt;&lt;"Constructor";<br /> return 0;<br /> }</p>
+<p style="padding-left: 30px;">};</p>
+<p style="padding-left: 30px;">void main()<br /> {<br />&nbsp;&nbsp;&nbsp; Mycpp obj;<br /> }</p></span>
+		<label class="cont"> Constructor
 			<input type="radio" name="q20" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 0
 			<input type="radio" name="q20" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> Compilation Error
 			<input type="radio" name="q20" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> Rutime Error
 			<input type="radio" name="q20" value="d">
 			<span class="checkmark"></span>
 		</label>
