--- a/omnicoder/Ques/3.html
+++ b/omnicoder/Ques/3.html
@@ -1,18 +1,19 @@
 <div id="Q">
-	<span id="Qdesc">Sample Question #3 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+	<span id="Qdesc">What is the default port for FTP service?</span>
+<br><br><br>
+		<label class="cont"> 80
 			<input type="radio" name="q3" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 65534
 			<input type="radio" name="q3" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 53
 			<input type="radio" name="q3" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> 21
 			<input type="radio" name="q3" value="d">
 			<span class="checkmark"></span>
 		</label>
