--- a/omnicoder/Ques/4.html
+++ b/omnicoder/Ques/4.html
@@ -1,18 +1,20 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #4 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">What will be the output?<br /> <p style="padding-left: 30px;">
+void omni()<br /> {<br /> int a=0,b=0;<br /> if(a++&amp;&amp;b++)<br /> a++;<br /> cout&lt;&lt;a&lt;&lt;" "&lt;&lt;b;<br />
+ }</p> </span><br>
+		<label class="cont"> 2 1
 			<input type="radio" name="q4" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 1 1
 			<input type="radio" name="q4" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 1 0
 			<input type="radio" name="q4" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> 0 0
 			<input type="radio" name="q4" value="d">
 			<span class="checkmark"></span>
 		</label>
