--- a/omnicoder/Ques/5.html
+++ b/omnicoder/Ques/5.html
@@ -1,18 +1,19 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #5 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">    Find the odd one out. </span>
+<br><br>
+		<label class="cont"> Angular
 			<input type="radio" name="q5" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> Djago
 			<input type="radio" name="q5" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> Jquery
 			<input type="radio" name="q5" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> React
 			<input type="radio" name="q5" value="d">
 			<span class="checkmark"></span>
 		</label>
