--- a/omnicoder/Ques/6.html
+++ b/omnicoder/Ques/6.html
@@ -1,18 +1,20 @@
 <div id="Q">
-	<span id="Qdesc">Sample Question #6 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+	<span id="Qdesc">Look for the error?<br /> 
+<p style="padding-left: 30px;">fun()<br /> {<br /> 
+  <p style="padding-left: 60px;">double a=20, b=40;<br /> b=ceil(a/b);<br /> 4;<br /> a=ceil(a/b);<br /> cout&lt;&lt;a&lt;&lt;" "&lt;&lt;b;<br /> </p>}</p></span>
+		<label class="cont"> compilation error
 			<input type="radio" name="q6" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> runtime error
 			<input type="radio" name="q6" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> no error
 			<input type="radio" name="q6" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> semantic error
 			<input type="radio" name="q6" value="d">
 			<span class="checkmark"></span>
 		</label>
