--- a/omnicoder/Ques/8.html
+++ b/omnicoder/Ques/8.html
@@ -1,18 +1,18 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #8 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">  00:e0:2d:e0:10:51  this is a representation of?</span><br><br>
+		<label class="cont"> ipv6 address
 			<input type="radio" name="q8" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> ipv4 address
 			<input type="radio" name="q8" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> mac address
 			<input type="radio" name="q8" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> none of these
 			<input type="radio" name="q8" value="d">
 			<span class="checkmark"></span>
 		</label>
