--- a/omnicoder/Ques/9.html
+++ b/omnicoder/Ques/9.html
@@ -1,18 +1,18 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #9 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">   find out the sum of the series 2^0 + 2^1 + 2^2 + 2^3 +....+ 2^63 = ?</span><br><br>
+		<label class="cont"> 9495364624
 			<input type="radio" name="q9" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont"> 2^64
 			<input type="radio" name="q9" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont"> 2^64 - 1
 			<input type="radio" name="q9" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont"> i need infinite time for this.
 			<input type="radio" name="q9" value="d">
 			<span class="checkmark"></span>
 		</label>
