--- a/omnicoder/Ques/7.html
+++ b/omnicoder/Ques/7.html
@@ -1,18 +1,18 @@
-<div id="Q">
-	<span id="Qdesc">Sample Question #7 bla bla bla bla bla bla bla bla bla bla bla bla </span>
-		<label class="cont"> A1
+<div id="Q"><br>
+	<span id="Qdesc">  Why is the use of  JSON? </span><br><br>
+		<label class="cont">   framework for building website.
 			<input type="radio" name="q7" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> B1
+		<label class="cont">   Transfer structured data over network.
 			<input type="radio" name="q7" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> C1
+		<label class="cont">   Python library for face detection.
 			<input type="radio" name="q7" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> D1
+		<label class="cont">   both a and b
 			<input type="radio" name="q7" value="d">
 			<span class="checkmark"></span>
 		</label>
