--- a/omnicoder/Ques/1.html
+++ b/omnicoder/Ques/1.html
@@ -6,19 +6,19 @@
 <p style="padding-left: 30px;">}</p>
      </span>
 	<p style="padding-left: 80px;">
-		<label class="cont"> a. 65 97
+		<label class="cont"> 65 97
 			<input type="radio" name="q1" value="a">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> b. A a
+		<label class="cont"> A a
 			<input type="radio" name="q1" value="b">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> c. A 97
+		<label class="cont"> A 97
 			<input type="radio" name="q1" value="c">
 			<span class="checkmark"></span>
 		</label>
-		<label class="cont"> d. 65 a
+		<label class="cont"> 65 a
 			<input type="radio" name="q1" value="d">
 			<span class="checkmark"></span>
 		</label>
