--- a/omnicoder/Ques/1.html
+++ b/omnicoder/Ques/1.html
@@ -1,6 +1,6 @@
 <div id="Q">
 	<span id="Qdesc">
-<p>1. What will be the output of FUN function?</p>
+<p> What will be the output of FUN function?</p>
 <p style="padding-left: 30px;">void FUN()<br /> {</p>
 <p style="padding-left: 60px;">int a = 60;<br /> int b = 5;<br /> char c = a+b;<br /> cout&lt;&lt;c&lt;&lt;" "&lt;&lt;c+32;</p>
 <p style="padding-left: 30px;">}</p>
