--- a/omnicoder2/Ques/1.html
+++ b/omnicoder2/Ques/1.html
@@ -1,11 +1,16 @@
 <div id="Q1">
-	<span id="Qdesc">Q1 Sample Question 1 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample Input<br>
-	3<br>
-	sample output<br>
-	***<br>
-	**<br>
-	*
-	<br>
+	<span id="Qdesc"><pre> <b>1. Given a range [l, r], the task is to find the sum fib(l) + fib(l + 1) + fib(l + 2) + ….. + fib(r) 
+    where fib(n) is the nth Fibonacci number. </span><br>
+		Input: 2 space separated integer i.e. l and r<br>
+
+		Output: 1 integer i.e. sum</pre>
+    
+
+
+<pre> Sample input:						Sample output:
+    2 5									11
+
+    Sample input:						Sample output:
+    4 8									50</b></pre>
 	<input type="file" name="fileToUpload1" ><br>
 </div>
