--- a/omnicoder2/Ques/10.html
+++ b/omnicoder2/Ques/10.html
@@ -1,9 +1,13 @@
 <div id="Q10">
-	<span id="Qdesc">Q10 Sample Question 10 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*
-	<br>
+	<span id="Qdesc"><pre> <b>10. Program to count frequency of all characters in a string.(all input characters will be small letter alphabets)
+
+	Sample Input 0		Sample Input 1
+	abbc			aaaa
+	
+	Sample Output 0		Sample Output 1
+	a 1			a 4
+	b 2
+	c 1<b></pre> </span><br>
+	
 	<input type="file" name="fileToUpload10" ><br>
 </div>
