--- a/omnicoder2/Ques/2.html
+++ b/omnicoder2/Ques/2.html
@@ -1,8 +1,5 @@
 <div id="Q2">
-	<span id="Qdesc">Q2 Sample Question 2 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre>  <b>2. Find LCM of two numbers. </b></pre> </span><br>
+	
 	<input type="file" name="fileToUpload2" ><br>
 </div>
