--- a/omnicoder2/Ques/3.html
+++ b/omnicoder2/Ques/3.html
@@ -1,8 +1,4 @@
 <div id="Q3">
-	<span id="Qdesc">Q3 Sample Question 3 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre> <b>3. Check whether a string is Palindrome or not</b></pre></span>
 	<input type="file" name="fileToUpload3" ><br>
 </div>
