--- a/omnicoder2/Ques/4.html
+++ b/omnicoder2/Ques/4.html
@@ -1,8 +1,5 @@
 <div id="Q4">
-	<span id="Qdesc">Q4 Sample Question 4 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre><b> 4. Check whether a string is substring of another without using a build-in substring </b><pre></span><br>
+
 	<input type="file" name="fileToUpload4" ><br>
 </div>
