--- a/omnicoder2/Ques/5.html
+++ b/omnicoder2/Ques/5.html
@@ -1,8 +1,12 @@
 <div id="Q5">
-	<span id="Qdesc">Q5 Sample Question 5 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre> <b>5. Print the following pattern ==>
+
+		
+        *        *
+        **      **
+        ***    ***
+        ****  ****
+	**********</b></pre></span><br>
+	
 	<input type="file" name="fileToUpload5" ><br>
 </div>
