--- a/omnicoder2/Ques/6.html
+++ b/omnicoder2/Ques/6.html
@@ -1,8 +1,7 @@
 <div id="Q6">
-	<span id="Qdesc">Q6 Sample Question 6 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre> <b> 6. Print the following series till N
+		
+      0*(1)^2 + 1*(2)^2 + 2*(3)^2 + 3*(4)^2 + 4*(5)^2+......  </b></pre> </span><br>
+	
 	<input type="file" name="fileToUpload6" ><br>
 </div>
