--- a/omnicoder2/Ques/7.html
+++ b/omnicoder2/Ques/7.html
@@ -1,8 +1,20 @@
 <div id="Q7">
-	<span id="Qdesc">Q7 Sample Question 7 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*<br>
+	<span id="Qdesc"><pre><b>7. find all continous subsequence of an array
+
+	Input Format
+	* first line contain a single integer denoting size of an array
+	* second line contain space seprated integers denoting elements of an array
+	
+	Input
+	3
+	1 2 3  
+	
+	Output
+	1
+	2
+	3
+	1 2
+	2 3
+	1 2 3</b></pre></span><br>
 	<input type="file" name="fileToUpload7" ><br>
 </div>
