--- a/omnicoder2/Ques/9.html
+++ b/omnicoder2/Ques/9.html
@@ -1,9 +1,12 @@
 <div id="Q9">
-	<span id="Qdesc">Q9 Sample Question 9 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*
-	<br>
+	<span id="Qdesc"><pre><b> 9. Check whether a number is in power of 2 or not. (in a form of 2^n where n is positive integer)
+		
+	Sample Input 0		Sample Input 1 
+	11			32
+	
+	Sample Output 0		Sample Output1
+	No			Yes
+	</b></pre> </span><br>
+	
 	<input type="file" name="fileToUpload9" ><br>
 </div>
