--- a/omnicoder2/Ques/8.html
+++ b/omnicoder2/Ques/8.html
@@ -1,9 +1,18 @@
 <div id="Q8">
-	<span id="Qdesc">Q8 Sample Question 8 bla bla bla bla bla bla bla bla bla bla bla bla </span><br>
-	sample output<br>
-	***<br>
-	**<br>
-	*
-	<br>
+	<span id="Qdesc"><pre><b>
+8. check whether a number is armstrong of not.( A number a is an Armstrong Number, if it is equal to the sum of its
+ own digits raised to the power of the number of digits)
+	
+	Sample Input 0           	Sample Input 1
+	153		 	 	25
+	
+	Sample Output 0	 	 	Sample Output 1
+	Yes			 	No
+		
+	Explanation 0			Explanation 1
+	153 is armstrong as		29 is not armstrong as
+	1^3 + 5^3 + 3^3 = 153	 	2^2 + 5^2 = 29 which is not same as initial number
+	which is same as input number</b>	</pre> </span><br>
+
 	<input type="file" name="fileToUpload8" ><br>
 </div>
