final update- instruction, round 2 ques

--- a/omnicoder2/Ques/2.html
+++ b/omnicoder2/Ques/2.html
@@ -1,5 +1,9 @@
 <div id="Q2">
-	<span id="Qdesc"><pre>  <b>2. Find LCM of two numbers. </b></pre> </span><br>
-	
+	<span id="Qdesc"><pre>  <b>2. Find LCM of two numbers. </pre> </span><br>
+<pre>    Sample input:					Sample output:
+    2 3								6
+
+    Sample input:					Sample output:
+    8 12							24</b></pre>	
 	<input type="file" name="fileToUpload2" ><br>
 </div>
