--- a/omnicoder2/Ques/3.html
+++ b/omnicoder2/Ques/3.html
@@ -1,4 +1,9 @@
 <div id="Q3">
-	<span id="Qdesc"><pre> <b>3. Check whether a string is Palindrome or not</b></pre></span>
+	<span id="Qdesc"><pre> <b>3. Check whether a string is Palindrome or not</pre></span>
+<pre>    Sample input:					Sample output:
+    hello							No
+
+    Sample input:					Sample output:
+    level							Yes</b></pre>
 	<input type="file" name="fileToUpload3" ><br>
 </div>
