--- a/omnicoder2/Ques/4.html
+++ b/omnicoder2/Ques/4.html
@@ -1,5 +1,11 @@
 <div id="Q4">
-	<span id="Qdesc"><pre><b> 4. Check whether a string is substring of another without using a build-in substring </b><pre></span><br>
+	<span id="Qdesc"><pre><b> 4. Check whether a string is substring of another without using a build-in substring </pre></span>
+
+<pre>    Sample input:					Sample output:
+    for abcforyouString2					3
+
+    Sample input:					Sample output:
+    practice abcforyou						-1</b></pre>
 
 	<input type="file" name="fileToUpload4" ><br>
 </div>
