--- a/omnicoder2/Ques/5.html
+++ b/omnicoder2/Ques/5.html
@@ -1,6 +1,7 @@
 <div id="Q5">
-	<span id="Qdesc"><pre> <b>5. Print the following pattern ==>
-
+	<span id="Qdesc"><pre> <b>5. Print the following pattern (user will give input 'n' number of lines)
+	Sample Input: 5
+	Sample Output:
 		
         *        *
         **      **
