--- a/omnicoder2/Ques/6.html
+++ b/omnicoder2/Ques/6.html
@@ -1,7 +1,10 @@
 <div id="Q6">
 	<span id="Qdesc"><pre> <b> 6. Print the following series till N
 		
-      0*(1)^2 + 1*(2)^2 + 2*(3)^2 + 3*(4)^2 + 4*(5)^2+......  </b></pre> </span><br>
+      0*(1)^2 + 1*(2)^2 + 2*(3)^2 + 3*(4)^2 + 4*(5)^2+......  </pre> </span><br>
+
+      <pre>    Sample input:					Sample output:
+    2								4</b></pre>
 	
 	<input type="file" name="fileToUpload6" ><br>
 </div>
